crates/stormchaser-tui/src/snapshots/stormchaser_tui__tests__render_connections_tab.snap
---
source: crates/stormchaser-tui/src/tests.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 100, height: 30 },
        content: [
            "                                                                                                    ",
            "                                                                                                    ",
            "  ┌ Storage Backends ─────────┐┌ Backend Detail ─────────────────────────────────────────────────┐  ",
            "  │test-sfs             | S3  ││ID: 00000000-0000-0000-0000-000000000000                         │  ",
            "  │                           ││Name: test-sfs                                                   │  ",
            "  │                           ││Description: Test SFS                                            │  ",
            "  │                           ││Type: S3                                                         │  ",
            "  │                           ││Default SFS: true                                                │  ",
            "  │                           ││Created At: 2021-01-01 00:00:00                                  │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││Config:                                                          │  ",
            "  │                           ││{                                                                │  ",
            "  │                           ││  "path": "/tmp/sfs"                                             │  ",
            "  │                           ││}                                                                │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  │                           ││                                                                 │  ",
            "  └───────────────────────────┘└─────────────────────────────────────────────────────────────────┘  ",
            "  ┌──────────────────────────────────────────────────────────────────────────────────────────────┐  ",
            "  │Tabs: 1-Runs 2-Backends 3-Webhooks 4-Rules 5-Cron | Panes: Tab/h/l | Nav: j/k | Scroll: [/]/Pg│  ",
            "  └──────────────────────────────────────────────────────────────────────────────────────────────┘  ",
            "                                                                                                    ",
            "                                                                                                    ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 5, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 5, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 6, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 6, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 7, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 7, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 8, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 8, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 9, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 9, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 10, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 10, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 11, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 11, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 12, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 12, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 13, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 13, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 14, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 14, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 15, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 15, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 16, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 16, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 17, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 17, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 18, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 18, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 19, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 19, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 20, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 20, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 21, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 21, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 22, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 22, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 22, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 22, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 3, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 30, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 23, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 32, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 97, y: 23, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 24, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 24, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 25, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 26, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 27, fg: White, bg: Reset, underline: Reset, modifier: NONE,
            x: 98, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 100, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
